# app-streamlit-fastapi

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  docker-compose.yaml  ex_celery.py  pyproject.toml  server.py  tasks.py
backend/data/redis/: dump.rdb
frontend/: Dockerfile  Top_page.py  app.py  pyproject.toml  utils.py
frontend/pages/: 1_💻_Optimization.py  2_📊_Results.py
tests/: test_demo_streamlit_fastapi.py
