[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mullzhang <mullzhang@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pyqubo = "^1.2.0"
dwave-neal = "^0.5.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
