[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["mullzhang <mullzhang@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.8.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
